# ChangeLog for dev-python/pyro
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyro/ChangeLog,v 1.51 2011/09/24 16:25:33 floppym Exp $

*pyro-3.15 (24 Sep 2011)

  24 Sep 2011; Mike Gilbert <floppym@gentoo.org> +pyro-3.15.ebuild:
  Version bump requested by aidecoe.

*pyro-4.8 (05 Sep 2011)

  05 Sep 2011; Dirkjan Ochtman <djc@gentoo.org> +pyro-4.8.ebuild:
  Version bump to 4.8 (thanks to jbergstroem for testing).

  07 Jul 2011; Jesus Rivero <neurogeek@gentoo.org> pyro-4.4.ebuild:
  Disabled tests that request connections wrt bug #370577

  01 Jul 2011; Markos Chandras <hwoarang@gentoo.org> -pyro-3.12.ebuild,
  -pyro-4.1.ebuild, -pyro-4.2.ebuild, -pyro-4.3.ebuild:
  Remove old ebuilds. Requested by Arfrever

  01 Jul 2011; Thomas Kahle <tomka@gentoo.org> pyro-4.4.ebuild:
  x86 stable per bug 370507

  27 Jun 2011; Brent Baude <ranger@gentoo.org> pyro-3.13.ebuild:
  Marking pyro-3.13 ppc for bug 371659

  27 Jun 2011; Brent Baude <ranger@gentoo.org> pyro-4.4.ebuild:
  Marking pyro-4.4 ppc for bug 370507

  19 Jun 2011; Markus Meier <maekke@gentoo.org> pyro-3.13.ebuild:
  x86 stable, bug #371659

  18 Jun 2011; Markos Chandras <hwoarang@gentoo.org> pyro-3.13.ebuild:
  Stable on amd64 wrt bug #371659

  08 Jun 2011; Markos Chandras <hwoarang@gentoo.org> pyro-4.4.ebuild:
  Stable on amd64 wrt bug #370507

  28 May 2011; Brent Baude <ranger@gentoo.org> pyro-4.3.ebuild:
  Marking pyro-4.3 ppc for bug 363873

*pyro-3.13 (09 May 2011)

  09 May 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +pyro-3.13.ebuild:
  Version bump.

*pyro-4.4 (26 Apr 2011)

  26 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +pyro-4.4.ebuild:
  Version bump.

  26 Apr 2011; Markos Chandras <hwoarang@gentoo.org> pyro-4.3.ebuild:
  Stable on amd64 wrt bug #363873

  18 Apr 2011; Thomas Kahle <tomka@gentoo.org> pyro-4.3.ebuild:
  x86 stable per bug 363873
