@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyro/Attic/pyro-4.8.ebuild,v 1.1 2011/09/05 13:09:44 djc Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyro/Attic/pyro-4.8.ebuild,v 1.2 2011/11/28 10:53:54 aidecoe Exp $
 
 EAPI="3"
 PYTHON_DEPEND="*:2.6"
@@ -13,7 +13,7 @@ MY_PN="Pyro4"
 MY_P="${MY_PN}-${PV}"
 
 DESCRIPTION="Advanced and powerful Distributed Object Technology system written entirely in Python"
-HOMEPAGE="http://www.xs4all.nl/~irmen/pyro4/ http://www.razorvine.net/projects/Pyro.html http://pypi.python.org/pypi/Pyro4"
+HOMEPAGE="http://www.xs4all.nl/~irmen/pyro/ http://pypi.python.org/pypi/Pyro4"
 SRC_URI="mirror://pypi/${MY_PN:0:1}/${MY_PN}/${MY_P}.tar.gz"
 
 LICENSE="MIT"
